<resources>
    <string name="app_name">Healthy</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="btn_log">LOGIN</string>
    <string name="btn_reg">Register New Account</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="calculate">CALCULATE</string>
    <string name="bmi"></string>
    <string name="add_weight">Add Weight</string>
</resources>
