<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/img_salad"
                android:layout_gravity="center"
                />

            <EditText
                android:drawableTint="@color/colorPrimary"
                android:inputType="text"
                android:drawableLeft="@drawable/ic_person"
                android:id="@+id/login_user_id"
                android:hint="@string/user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <EditText
                android:drawableTint="@color/colorPrimary"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_lock"
                android:id="@+id/login_password"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <Button
                android:background="@color/colorPrimary"
                android:id="@+id/login_login_btn"
                android:text="@string/btn_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="end"
                android:id="@+id/login_reg_btn"
                android:text="@string/btn_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>